--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <title>ES6</title>
   </head>
   <body>
-    <script type="text/babel" src="/script-compiled.js"></script>
+    <script type="text/javascript" src="/script-compiled.js"></script>
   </body>
 </html>
